--- a/user-management-server/package.json
+++ b/user-management-server/package.json
@@ -19,7 +19,9 @@
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
+    "nodemailer": "^6.7.2",
     "path": "^0.12.7"
   },
   "bugs": {
