--- a/user-management-server/package.json
+++ b/user-management-server/package.json
@@ -15,14 +15,17 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   },
   "bugs": {
     "url": "https://github.com/Niketgupta101/Boilerplate-Structure/issues"
