Added User routes.

--- a/user-management-server/.env.example
+++ b/user-management-server/.env.example
@@ -1,5 +1,5 @@
-NODE_ENV = development
-PORT = 3000
-MONGO_URI = uri
-JWT_SECRET = secret
-JWT_EXPIRATION_MINUTES=15
+NODE_ENV =
+PORT =
+MONGO_URI =
+JWT_SECRET =
+JWT_EXPIRATION_MINUTES=
