--- a/user-management-server/package.json
+++ b/user-management-server/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv-safe": "^8.2.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
