--- a/social-media-server/.env.example
+++ b/social-media-server/.env.example
@@ -3,3 +3,9 @@ PORT =
 MONGO_URI =
 JWT_SECRET =
 JWT_EXPIRATION_MINUTES=
+BASE_URL = 
+CLIENT_URL = 
+SERVER_URL = 
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET = 
